# Haven

./: DOCUMENTATION.md  Dockerfile  HACKATHON_SUBMISSION.md  README.md  cloudbuild.yaml  docker-compose.yml
.agents/tasks/task-4-ui-bugfixes/: context.json  task.json
.agents/tasks/task-6fixes-sprint/: context.json  task.json
.agents/tasks/task-batch-2-bugs/: context.json  (+2 more)
backend/: .env.example  requirements.txt
backend/app/: auth.py  config.py  main.py  ws_manager.py
backend/tests/: conftest.py  test_agents.py  test_briefing.py  test_firestore.py  test_intelligence.py  test_mcp_servers.py  test_memory.py  test_memory_rag.py  test_onboarding.py  test_reminder_dedup.py  test_timectx.py  test_user_context.py  test_voice.py  test_websocket.py
docs/: CLOUD_SCHEDULER_SETUP.md  DEMO_SCRIPT.md  GCP_SETUP.md  WHY_HAVEN_WINS.md
frontend/: .env.example  Dockerfile  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__mocks__/: react-markdown.tsx  remark-gfm.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CommandPalette.tsx  FocusMode.tsx  PomodoroTimer.tsx  Providers.tsx  SpotifyMiniPlayer.tsx
frontend/hooks/: useChatSocket.ts  useNotificationSocket.ts
frontend/lib/: api-extended.ts  api.ts  date-utils.ts  templates.ts  voice.ts  ws.ts
mcp-servers/google-calendar/: pyproject.toml  server.py
mcp-servers/google-gmail/: pyproject.toml
mcp-servers/google-slides/: server.py
mcp-servers/google-tasks/: pyproject.toml
shared/: schemas.py
(+301 files in other folders)
