[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronai-mcp-google-gmail"
version = "0.1.0"
description = "Haven MCP server for Google Gmail integration"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.150.0",
]

[project.scripts]
chronai-gmail = "server:main"
