[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronai-mcp-google-tasks"
version = "0.1.0"
description = "Haven MCP server for Google Tasks integration"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.35.0",
    "google-api-python-client>=2.150.0",
]

[project.scripts]
chronai-tasks = "server:main"
